[gd_scene load_steps=24 format=2]

[ext_resource path="res://Paddle/Paddle.gd" type="Script" id=1]
[ext_resource path="res://Ball/Ball_Container.gd" type="Script" id=2]
[ext_resource path="res://Brick/Bricks.gd" type="Script" id=3]
[ext_resource path="res://HUD/HUD.gd" type="Script" id=4]
[ext_resource path="res://Walls/Walls.gd" type="Script" id=5]
[ext_resource path="res://Background/Background.gd" type="Script" id=6]
[ext_resource path="res://Assets/confetti.png" type="Texture" id=7]
[ext_resource path="res://Assets/bubble.png" type="Texture" id=8]

[sub_resource type="Gradient" id=9]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=10]
gradient = SubResource( 9 )

[sub_resource type="Curve" id=14]
min_value = -1.0
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, -1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=15]
curve = SubResource( 14 )

[sub_resource type="Curve" id=11]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=12]
curve = SubResource( 11 )

[sub_resource type="ParticlesMaterial" id=13]
flag_disable_z = true
spread = 75.0
gravity = Vector3( 0, 98, 0 )
initial_velocity = 200.0
initial_velocity_random = 0.5
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 300.0
linear_accel_random = 1.0
radial_accel = 100.0
radial_accel_random = 1.0
scale = 0.25
scale_random = 0.5
scale_curve = SubResource( 12 )
color_ramp = SubResource( 10 )
hue_variation_random = 1.0
hue_variation_curve = SubResource( 15 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 50, 10 )

[sub_resource type="Curve" id=7]
min_value = -360.0
max_value = 360.0
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, -360 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=8]
curve = SubResource( 7 )

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0, 0.451429, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.497436, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=5]
curve = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=6]
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 60.0
gravity = Vector3( 0, 98, 0 )
initial_velocity = 450.0
initial_velocity_random = 0.75
angular_velocity = 100.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle_random = 0.5
angle_curve = SubResource( 8 )
scale = 0.5
scale_random = 0.5
scale_curve = SubResource( 5 )
color_ramp = SubResource( 3 )

[node name="Game" type="Node2D"]

[node name="Background" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 768.0
color = Color( 0, 0, 0, 1 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Walls" type="StaticBody2D" parent="."]
script = ExtResource( 5 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Walls"]
polygon = PoolVector2Array( 0, 0, 0, 768, 1024, 768, 1024, 0, 64, 0, 64, -64, 1088, -64, 1088, 832, -64, 832, -64, -64, 64, -64, 64, 0 )

[node name="Particles2D" type="Particles2D" parent="Walls"]
emitting = false
lifetime = 0.4
one_shot = true
process_material = SubResource( 13 )
texture = ExtResource( 8 )

[node name="Bricks" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="Paddle_Container" type="Node2D" parent="."]

[node name="Paddle" type="KinematicBody2D" parent="Paddle_Container"]
position = Vector2( 507, 700 )
script = ExtResource( 1 )

[node name="Color" type="ColorRect" parent="Paddle_Container/Paddle"]
margin_right = 100.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Paddle_Container/Paddle"]
position = Vector2( 50, 10 )
shape = SubResource( 1 )

[node name="Particles2D" type="Particles2D" parent="Paddle_Container"]
position = Vector2( 507, 700 )
emitting = false
amount = 6
lifetime = 0.4
one_shot = true
process_material = SubResource( 6 )
texture = ExtResource( 7 )

[node name="Ball_Container" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="Camera" type="Camera2D" parent="."]
position = Vector2( 512, 383 )

[node name="HUD" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="Control" parent="HUD"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="HUD/Menu"]
margin_left = -13.0
margin_top = -13.0
margin_right = 275.0
margin_bottom = 784.0
color = Color( 0.286275, 0.313726, 0.341176, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Color" type="Control" parent="HUD/Menu"]
margin_left = 10.0
margin_top = 10.0
margin_right = 10.0
margin_bottom = 10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Color" type="CheckBox" parent="HUD/Menu/Color"]
margin_right = 126.419
margin_bottom = 26.4193
text = "Color"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Particles" type="Control" parent="HUD/Menu"]
margin_left = 10.0
margin_top = 50.0
margin_right = 10.0
margin_bottom = 50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Particle_Paddle" type="CheckBox" parent="HUD/Menu/Particles"]
text = "Particle Paddle"

[node name="Particle_Walls" type="CheckBox" parent="HUD/Menu/Particles"]
margin_top = 30.0
text = "Particle Walls"

[node name="Particle_Blocks" type="CheckBox" parent="HUD/Menu/Particles"]
margin_top = 60.0
text = "Particle Blocks"

[node name="Blocks" type="Control" parent="HUD/Menu"]
margin_top = 145.0
margin_bottom = 145.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Blocks_Appear" type="CheckBox" parent="HUD/Menu/Blocks"]
margin_left = 10.0
margin_top = 10.0
margin_right = 136.419
margin_bottom = 36.4193
text = "Blocks Appear"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Blocks_Fall" type="CheckBox" parent="HUD/Menu/Blocks"]
margin_left = 10.0
margin_top = 43.0
margin_right = 134.0
margin_bottom = 67.0
text = "Blocks Fall"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Blocks_Fade" type="CheckBox" parent="HUD/Menu/Blocks"]
margin_left = 10.0
margin_top = 70.0
margin_right = 134.0
margin_bottom = 104.0
text = "Blocks Fade"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Blocks_Crack" type="CheckBox" parent="HUD/Menu/Blocks"]
margin_left = 10.0
margin_top = 100.0
margin_right = 165.0
margin_bottom = 139.0
text = "Blocks Crack"

[node name="Ball" type="Control" parent="HUD/Menu"]
margin_top = 310.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider" type="HSlider" parent="HUD/Menu/Ball"]
margin_left = 15.0
margin_top = 18.0
margin_right = 110.0
margin_bottom = 26.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HUD/Menu/Ball"]
margin_left = 35.0
margin_right = 124.0
margin_bottom = 14.0
text = "Screen Shake"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Paddle" type="Control" parent="HUD/Menu"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Audio" type="Control" parent="HUD/Menu"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Reset" type="Button" parent="HUD/Menu"]
margin_left = 30.0
margin_top = 670.0
margin_right = 110.0
margin_bottom = 700.0
text = "Reset"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="HUD/Menu"]
margin_left = 30.0
margin_top = 710.0
margin_right = 110.0
margin_bottom = 740.0
text = "Quit"
[connection signal="toggled" from="HUD/Menu/Color/Color" to="HUD" method="_on_Color_toggled"]
[connection signal="toggled" from="HUD/Menu/Particles/Particle_Paddle" to="HUD" method="_on_Particle_Paddle_toggled"]
[connection signal="toggled" from="HUD/Menu/Particles/Particle_Walls" to="HUD" method="_on_Particle_Walls_toggled"]
[connection signal="toggled" from="HUD/Menu/Particles/Particle_Blocks" to="HUD" method="_on_Particle_Blocks_toggled"]
[connection signal="pressed" from="HUD/Menu/Reset" to="HUD" method="_on_Reset_pressed"]
[connection signal="pressed" from="HUD/Menu/Quit" to="HUD" method="_on_Quit_pressed"]
